# afhacker

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  START_HERE.md  conftest.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: security_scan.yml
docs/: technical_report.md
src/: __init__.py  app.py  report_generator.py  scanner.py
src/database/: __init__.py  database.py  models.py
src/modules/: __init__.py  command_injection.py  csrf_scanner.py  info_disclosure.py  nmap_scanner.py  path_traversal.py  sqli_scanner.py  xss_scanner.py
src/templates/: index.html
src/utils/: __init__.py  auth.py  http_client.py  payloads.py  scoring.py
tests/: test_scanner.py
